--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Mappedbus : IPC between multiple Java processes with nanosecond latency">
+    <title>Mappedbus by caplogic</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Mappedbus</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Mappedbus</h1>
+        <p>IPC between multiple Java processes with nanosecond latency</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/caplogic/MappedBus">View on GitHub</a>
+        <p class="view"><a href="https://github.com/caplogic/MappedBus">View the Project on GitHub <small>caplogic/MappedBus</small></a></p>
 
-          <h1 id="project_title">Mappedbus</h1>
-          <h2 id="project_tagline">IPC between multiple Java processes with nanosecond latency</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/caplogic/MappedBus/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/caplogic/MappedBus/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/caplogic/MappedBus/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/caplogic/MappedBus/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/caplogic/MappedBus">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h2>
 <a id="mappedbus-is-a-java-based-high-throughput-low-latency-message-bus-using-either-a-memory-mapped-file-or-shared-memory-as-transport" class="anchor" href="#mappedbus-is-a-java-based-high-throughput-low-latency-message-bus-using-either-a-memory-mapped-file-or-shared-memory-as-transport" aria-hidden="true"><span class="octicon octicon-link"></span></a>MappedBus is a Java based high throughput, low latency message bus, using either a memory mapped file or shared memory as transport</h2>
 
@@ -187,16 +184,12 @@ Op/s: 44404868
 
 <p>For questions or suggestions about MappedBus feel free to drop a mail to: <a href="mailto:mappedbus@gmail.com">mappedbus@gmail.com</a></p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Mappedbus maintained by <a href="https://github.com/caplogic">caplogic</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/caplogic">caplogic</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -207,7 +200,6 @@ Op/s: 44404868
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-
 
   </body>
 </html>
