--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <p>MappedBus can also be described as an efficient IPC mechanism which enable several Java processes/JVMs to communicate by message passing.</p>
 
-<p>The throughput (on a laptop, i7-4558U @ 2.8 GHZ) between a single producer writing at full speed and a single consumer is around 40 million messages per second (a small message consisting of three integer fields), and the average read/write latency is around 25 ns per message.</p>
+<p>The throughput (on a laptop, i7-4558U @ 2.8 GHz) between a single producer writing at full speed and a single consumer is around 40 million messages per second (a small message consisting of three integer fields), and the average read/write latency is around 25 ns per message.</p>
 
 <p>MappedBus does not create any objects after startup and therefore has no GC impact.</p>
 
