Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <p>MappedBus can also be described as an efficient IPC mechanism which enable several Java processes/JVMs to communicate by message passing.</p>
 
-<p>The throughput (on a laptop, i7-4558U @ 2.8 GHZ) between a single producer writing at full speed and a single consumer is around 40 million messages per second (a small message consisting of three integer fields), and the average read/write latency is around 25 ns per message.</p>
+<p>The throughput (on a laptop, i7-4558U @ 2.8 GHz) between a single producer writing at full speed and a single consumer is around 40 million messages per second (a small message consisting of three integer fields), and the average read/write latency is around 25 ns per message.</p>
 
 <p>MappedBus does not create any objects after startup and therefore has no GC impact.</p>
 
@@ -55,7 +55,7 @@
 <h3>
 <a id="getting-started" class="anchor" href="#getting-started" aria-hidden="true"><span class="octicon octicon-link"></span></a>Getting Started</h3>
 
-<p>Download mappedbus.jar from the release tab (or clone the project and build it from source by running "ant") and try out any of the sample applications described below.</p>
+<p>Download the zip or tar file which contains the mappedbus.jar file under the dist folder (or clone the project and build it from source by running "ant") and try out any of the sample applications described below.</p>
 
 <h3>
 <a id="usage" class="anchor" href="#usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Usage</h3>
