--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Mappedbus by caplogic</title>
+    <title>Mappedbus: IPC between multiple Java processes with nanosecond latency</title>
   </head>
 
   <body>
@@ -55,7 +55,7 @@
 <h3>
 <a id="getting-started" class="anchor" href="#getting-started" aria-hidden="true"><span class="octicon octicon-link"></span></a>Getting Started</h3>
 
-<p>Download mappedbus.jar from the release tab (or clone the project and build it from source by running "ant") and try out any of the sample applications described below.</p>
+<p>Download the zip file which contains mappedbus.jar in the dist folder (or clone the project and build it from source by running "ant") and try out any of the sample applications described below.</p>
 
 <h3>
 <a id="usage" class="anchor" href="#usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Usage</h3>
@@ -182,7 +182,7 @@ Op/s: 44404868
 <h3>
 <a id="questions" class="anchor" href="#questions" aria-hidden="true"><span class="octicon octicon-link"></span></a>Questions</h3>
 
-<p>For questions or suggestions about MappedBus feel free to drop a mail to: <a href="mailto:mappedbus@gmail.com">mappedbus@gmail.com</a></p>
+<p>For questions or suggestions about MappedBus feel free to drop a mail to <a href="mailto:mappedbus@gmail.com">mappedbus@gmail.com</a></p>
         </section>
 
         <aside id="sidebar">
