--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@ Read: Token [from=1, to=2]
 
 <p>The project contains a performance test which can be run as follows:</p>
 
-<pre><code>&gt; java -cp mappedbus.jar se.caplogic.mappedbus.perf.MessageWriter /home/youraccount/tmp/test
+<pre><code>&gt; java -cp mappedbus.jar se.caplogic.mappedbus.perf.MessageWriter /tmp/test
 ...
 </code></pre>
 
-<pre><code>&gt; java -cp mappedbus.jar se.caplogic.mappedbus.perf.MessageReader /home/youraccount/tmp/test
+<pre><code>&gt; java -cp mappedbus.jar se.caplogic.mappedbus.perf.MessageReader /tmp/test
 Elapsed: 1801 ms
 Per op: 22 ns
 Op/s: 44404868
