--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
           <h2>
 <a id="mappedbus-is-a-java-based-high-throughput-low-latency-message-bus-using-either-a-memory-mapped-file-or-shared-memory-as-transport" class="anchor" href="#mappedbus-is-a-java-based-high-throughput-low-latency-message-bus-using-either-a-memory-mapped-file-or-shared-memory-as-transport" aria-hidden="true"><span class="octicon octicon-link"></span></a>MappedBus is a Java based high throughput, low latency message bus, using either a memory mapped file or shared memory as transport</h2>
 
-<p>MappedBus was inspired by <a href="https://github.com/OpenHFT/Chronicle-Queue">Java Chronicle</a> with the main difference that it's designed to efficiently support multiple writers – enabling use cases where the order of messages produced by multiple processes are important.</p>
+<p>Mappedbus was inspired by <a href="https://github.com/OpenHFT/Chronicle-Queue">Java Chronicle</a> with the main difference that it's designed to efficiently support multiple writers – enabling use cases where the order of messages produced by multiple processes are important.</p>
 
 <p align="center">
   <img src="http://3.bp.blogspot.com/-L51XiyruNMA/VU5K9dMtx9I/AAAAAAAAACg/AOkdwjTrzgI/s320/mappedbus.png">
 </p>
 
-<p>MappedBus can also be described as an efficient IPC mechanism which enable several Java processes/JVMs to communicate by message passing.</p>
+<p>Mappedbus can also be described as an efficient IPC mechanism which enable several Java processes/JVMs to communicate by message passing.</p>
 
 <p>The throughput (on a laptop, i7-4558U @ 2.8 GHz) between a single producer writing at full speed and a single consumer is around 40 million messages per second (a small message consisting of three integer fields), and the average read/write latency is around 25 ns per message.</p>
 
-<p>MappedBus does not create any objects after startup and therefore has no GC impact.</p>
+<p>Mappedbus does not create any objects after startup and therefore has no GC impact.</p>
 
 <h4>
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features:</h4>
