--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h2>
-<a id="mappedbus-is-a-java-based-high-throughput-low-latency-message-bus-using-either-a-memory-mapped-file-or-shared-memory-as-transport" class="anchor" href="#mappedbus-is-a-java-based-high-throughput-low-latency-message-bus-using-either-a-memory-mapped-file-or-shared-memory-as-transport" aria-hidden="true"><span class="octicon octicon-link"></span></a>MappedBus is a Java based high throughput, low latency message bus, using either a memory mapped file or shared memory as transport</h2>
+<a id="mappedbus-is-a-java-based-high-throughput-low-latency-message-bus-using-either-a-memory-mapped-file-or-shared-memory-as-transport" class="anchor" href="#mappedbus-is-a-java-based-high-throughput-low-latency-message-bus-using-either-a-memory-mapped-file-or-shared-memory-as-transport" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mappedbus is a Java based high throughput, low latency message bus, using either a memory mapped file or shared memory as transport</h2>
 
 <p>Mappedbus was inspired by <a href="https://github.com/OpenHFT/Chronicle-Queue">Java Chronicle</a> with the main difference that it's designed to efficiently support multiple writers – enabling use cases where the order of messages produced by multiple processes are important.</p>
 
