--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ Op/s: 44404868
 <h3>
 <a id="questions" class="anchor" href="#questions" aria-hidden="true"><span class="octicon octicon-link"></span></a>Questions</h3>
 
-<p>For questions or suggestions about Mappedbus feel free to drop a mail to <a href="mailto:info@mappedbus.io">mappedbus@gmail.com</a></p>
+<p>For questions or suggestions about Mappedbus feel free to drop a mail to <a href="mailto:info@mappedbus.io">info@mappedbus.io</a></p>
         </section>
 
         <aside id="sidebar">
