--- a/index.html
+++ b/index.html
@@ -112,15 +112,15 @@ writer<span class="pl-k">.</span>write(buffer, <span class="pl-c1">0</span>, buf
 
 <p>The object based one work as follows. The ObjectWriter class will send a message, PriceUpdate, which contains three fields: source, price and quantity. The first argument of the ObjectWriter is used to populate the source. The ObjectReader simply prints every message it receives.</p>
 
-<pre><code>&gt; java -cp mappedbus.jar se.caplogic.mappedbus.sample.object.ObjectWriter 0
+<pre><code>&gt; java -cp mappedbus.jar io.mappedbus.sample.object.ObjectWriter 0
 ...
 </code></pre>
 
-<pre><code>&gt; java -cp mappedbus.jar se.caplogic.mappedbus.sample.object.ObjectWriter 1
+<pre><code>&gt; java -cp mappedbus.jar io.mappedbus.sample.object.ObjectWriter 1
 ...
 </code></pre>
 
-<pre><code>&gt; java -cp mappedbus.jar se.caplogic.mappedbus.sample.object.ObjectReader
+<pre><code>&gt; java -cp mappedbus.jar io.mappedbus.sample.object.ObjectReader
 ...
 Read: PriceUpdate [source=0, price=20, quantity=40]
 Read: PriceUpdate [source=1, price=8, quantity=16]
@@ -131,19 +131,19 @@ Read: PriceUpdate [source=0, price=22, quantity=44]
 
 <p>Another example simulates a token passed around between a number of nodes. Each node will send a message, Token, which contains two fields: to and from. When a node receives a token it will check whether it's the receiver and if so it will send a new token message with the "to" field set to it's id + 1 mod "number of nodes".</p>
 
-<pre><code>&gt; java -cp mappedbus.jar se.caplogic.mappedbus.sample.token.Token 0 3
+<pre><code>&gt; java -cp mappedbus.jar io.mappedbus.sample.token.Token 0 3
 Read: Token [from=0, to=1]
 Read: Token [from=1, to=2]
 ...
 </code></pre>
 
-<pre><code>&gt; java -cp mappedbus.jar se.caplogic.mappedbus.sample.token.Token 1 3
+<pre><code>&gt; java -cp mappedbus.jar io.mappedbus.sample.token.Token 1 3
 Read: Token [from=0, to=1]
 Read: Token [from=1, to=2]
 ...
 </code></pre>
 
-<pre><code>&gt; java -cp mappedbus.jar se.caplogic.mappedbus.sample.token.Token 2 3
+<pre><code>&gt; java -cp mappedbus.jar io.mappedbus.sample.token.Token 2 3
 Read: Token [from=0, to=1]
 Read: Token [from=1, to=2]
 ...
@@ -154,11 +154,11 @@ Read: Token [from=1, to=2]
 
 <p>The project contains a performance test which can be run as follows:</p>
 
-<pre><code>&gt; java -cp mappedbus.jar se.caplogic.mappedbus.perf.MessageWriter /tmp/test
+<pre><code>&gt; java -cp mappedbus.jar io.mappedbus.perf.MessageWriter /tmp/test
 ...
 </code></pre>
 
-<pre><code>&gt; java -cp mappedbus.jar se.caplogic.mappedbus.perf.MessageReader /tmp/test
+<pre><code>&gt; java -cp mappedbus.jar io.mappedbus.perf.MessageReader /tmp/test
 Elapsed: 1801 ms
 Per op: 22 ns
 Op/s: 44404868
