--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Mappedbus: IPC between multiple Java processes with nanosecond latency</title>
+    <title>Mappedbus: Low latency IPC between a group of Java processes/JVMs</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
         <h1>Mappedbus</h1>
-        <h2>IPC between multiple Java processes with nanosecond latency</h2>
+        <h2>Low latency IPC between a group of Java processes/JVMs</h2>
         <a href="https://github.com/caplogic/MappedBus" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
