--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="inner">
         <h1>Mappedbus</h1>
         <h2>Low latency IPC between multiple Java processes</h2>
-        <a href="https://github.com/caplogic/MappedBus" class="button"><small>View project on</small> GitHub</a>
+        <a href="https://github.com/caplogic/Mappedbus" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
 
