--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <p>Mappedbus was inspired by <a href="https://github.com/OpenHFT/Chronicle-Queue">Java Chronicle</a> with the main difference that it's designed to efficiently support multiple writers – enabling use cases where the order of messages produced by multiple processes are important.</p>
 
 <p align="center">
-  <img src="http://3.bp.blogspot.com/-L51XiyruNMA/VU5K9dMtx9I/AAAAAAAAACg/AOkdwjTrzgI/s320/mappedbus.png">
+  <img src="images/mappedbus.png">
 </p>
 
 <p>Mappedbus can also be described as an efficient IPC library which enable several Java processes/JVMs to communicate by message passing.</p>
