--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Mappedbus: Low latency IPC between multiple Java processes</title>
+    <title>Mappedbus: A library for low latency IPC between multiple Java processes/JVMs</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
         <h1>Mappedbus</h1>
-        <h2>Low latency IPC between multiple Java processes</h2>
+        <h2>A library for low latency IPC between multiple Java processes/JVMs</h2>
         <a href="https://github.com/caplogic/Mappedbus" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
