--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <p>Mappedbus was inspired by <a href="https://github.com/OpenHFT/Chronicle-Queue">Java Chronicle</a> with the main difference that it's designed to efficiently support multiple writers – enabling use cases where the order of messages produced by multiple processes are important.</p>
 
-<p>The throughput (on a laptop, i7-4558U @ 2.8 GHz) between a single producer writing at full speed and a single consumer is around 40 million messages per second (a small message consisting of three integer fields), and the average read/write latency is around 25 ns per message.</p>
+<p>The throughput (on a laptop, i7-4558U @ 2.8 GHz) between a single producer writing at full speed and a single consumer is around 14 million messages per second (a small message consisting of three integer fields), and the average read/write latency is around 70 ns per message.</p>
 
 <p>Mappedbus does not create any objects after startup and therefore has no GC impact.</p>
 
@@ -149,14 +149,14 @@ Read: Token [from=1, to=2]
 
 <p>The project contains a performance test which can be run as follows:</p>
 
+<pre><code>&gt; rm -rf /tmp/test;java -cp mappedbus.jar io.mappedbus.perf.MessageReader /tmp/test
+Elapsed: 5660 ms
+Per op: 70 ns
+Op/s: 14131938
+</code></pre>          
+          
 <pre><code>&gt; java -cp mappedbus.jar io.mappedbus.perf.MessageWriter /tmp/test
 ...
-</code></pre>
-
-<pre><code>&gt; java -cp mappedbus.jar io.mappedbus.perf.MessageReader /tmp/test
-Elapsed: 1801 ms
-Per op: 22 ns
-Op/s: 44404868
 </code></pre>
 
 <h3>
@@ -165,11 +165,12 @@ Op/s: 44404868
 <p>Here's how Mappedbus solves the synchronization problem between multiple writers (each running in it's own process/JVM):</p>
 
 <ul>
-<li><p>The first eight bytes of the file make up a field called the limit. This field specifies how much data has actually been written to the file. The readers will poll the limit field (using volatile) to see whether there's a new record to be read.</p></li>
-<li><p>When a writer wants to add a record to the file it will use the fetch-and-add instruction to atomically update the limit field.</p></li>
-<li><p>When the limit field has increased a reader will know there's new data to be read, but the writer which updated the limit field might not yet have written any data in the record. To avoid this problem each record contains an initial byte which make up the commit field.</p></li>
-<li><p>When a writer has finished writing a record it will set the commit field (using volatile) and the reader will only start reading a record once it has seen that the commit field has been set.</p></li>
-<li><p>A writer might crash after it has updated the limit field but before it has updated the commit field. To avoid this problem there's a field next to the commit field called the rollback field. The reader has a timeout for how long it will wait for the commit field to be set. When that time is reached the reader will set the rollback field (using volatile) and continue with the next record. The rollback field has precedence over the commit field, when the rollback field is set the record is always ignored by the readers.</p></li>
+<li><p>The first eight bytes of the file make up a field called the limit. This field specifies how much data has been written to the file. The readers will poll the limit field (using volatile) to see whether there's a new record to be read.</p></li>
+<li><p>When a writer adds a record to the file it will use the fetch-and-add instruction to atomically update the limit field.</p></li>
+<li><p>When the limit field has increased a reader will know there's new data to be read, but the writer which updated the limit field might not yet have written any data in the record. To avoid this problem each record contains an initial four bytes which make up the status flag field. The status flag field has three possible values: not set, committed, rolled back.</p></li>
+<li><p>When a writer has finished writing a record it will set the status field to value indicating the record has been committed (using compare and swap) and the reader will only start reading a record once it has seen that the commit field has been set.</p></li>
+<li><p>A writer might crash after it has updated the limit field but before it has updated the status flag field indicating the record has been committed. To avoid this problem the reader has a timeout for how long it will wait for the commit field to be set. When that time is reached the reader will set the status flag field (using compare and swap) to a value indicating the record has been rolled back, and continue with the next record. When the status flag field is set to indicate it's been rolled back the record is always ignored by the readers.</p></li>
+<li><p>A slow writer may write a message and be about to set the status flag to indicate the record has been committed, while a reader has already timed out and set the status flag to indicate the record has been rolled back. Since the status flag is updated using compare-and-swap the writer will detect this, and the write() method call will return false to indicate the write was not successful.</p></li>
 </ul>
 
 <p>The solution seems to work well on Linux x86 with Oracle's JVM (1.8) but it probably won't work on all platforms. The project contains a test (called IntegrityTest) to check whether it works on the platform used.</p>
